tests/semantic/invalid/redeclaration_initializer.mc
int value = 1;
int value = missing + 1;
value = 2;
